# forest_carbon_estimation

./: .gitignore  .pre-commit-config.yaml  README.md  abg_biomass_v2.py  gaussianInterp.py  pyproject.toml
.github/workflows/: ci.yml  format.yml
data/: 1000_trees.json  100_trees.csv  100_trees.json  100_trees_spatial_testing.json  10_trees.json
example_data/: 1000_trees.csv  1000_trees.json  100_trees.csv  100_trees.json  10_trees.json  original_example.json
forest_carbon/: __main__.py  abg_biomass.py  agb_biomass.py  combined_agb_calculator.py  config.py  single_tree_estimation.py  table5db.py  test_single_tree_estimation.py  tree_preprocessing.py  unittests.py
forest_carbon/data/: taxa_level_agb_model_parameters.csv  tree_species_info.csv
kriging/: kriging copy.ipynb  kriging.ipynb  kriging.py  pykrige.ipynb
notebooks/: kriging.ipynb
scripts/: generate_test_data.py
tests/: test_abg_biomass_v2.py  test_biomass_calculator.py  test_single_tree_estimation.py  test_taxa_biomass.py  test_tree_preprocessing.py
